--- a/humidity.html
+++ b/humidity.html
@@ -45,51 +45,35 @@
     </div>
     </div>
   </nav>
+  
 
+  <div class="container">
+      <div class="row">
+        <div class="col-lg-7 col-sm-6" >
+            <h1 class="description-header" >Humidity
+            </h1>
+            <hr>
+            <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" class="description-image" />
+            <p>humidity tends to increase... </p>
 
-  <div class="container" >
-      <div class = "row" >
-          <div class = "col-lg-7 col-sm-6" >
-              <h3 class = "description-header" >Summary: Latitude vs. X
-            
-              </h3>
-              <hr>
-              <img src = "Resources/assets/images/Fig1.png" alt="Latitude vs Maximum Temperature" class = "description-image" >
-              <p >
-                 The purpose of this project.. 
-              </p>
-          </div>
-          
-
-          <div class="col-md-4"> 
-              <div class="col-md-12" >
-                  <h3 class="description-header" >Visualizations</h3>
-                  <hr>
-                  <div class="row" >
-                      <div class="col-3 col-md-6">
-                          <a href="max-temp.html" >
-                              <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. max-temp" style="width:100% ;height:100%">
-                          </a>
-                      </div>
-                      <div class="col-3 col-md-6">
-                        <a href="humidity.html" >
-                            <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" style="width:100% ;height:100%" >
-                        </a>
-                    </div>
-                    <div class="col-3 col-md-6">
-                        <a href="cloudiness.html" >
-                            <img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" style="width:100% ;height:100%">
-                        </a>
-                    </div>
-                    <div class="col-3 col-md-6">
-                        <a href="windspeed.html" >
-                            <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" style="width:100% ;height:100%">
-                        </a>
-                    </div>
-                  </div>
-              </div>
-
-          </div>
+        </div>
+        <div class="col-lg-5 col-sm-6">
+            <h1 class="description-header">
+                Visualizations
+            </h1>
+            <a href="max-temp.html" >
+                <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. max-temp" style="width:100% ;height:100%">
+            </a>
+            <a href="humidity.html" >
+                <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" style="width:100% ;height:100%" >
+            </a>
+            <a href="cloudiness.html" >
+                <img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" style="width:100% ;height:100%">
+            </a>
+            <a href="windspeed.html" >
+                <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" style="width:100% ;height:100%">
+            </a>
+        </div>
       </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -99,4 +83,3 @@
   </body>
   
   </html>
-  
