--- a/humidity.html
+++ b/humidity.html
@@ -6,45 +6,42 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
 
-    <a class="navbar-brand" href="index.html">Latitude</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-elements" style="border:solid 2px white">
-      <span class="navbar-toggler-icon" style="color:white"></span>
-    </button>
+                <a class="navbar-brand" href="index.html">Web Design Challenge</a>
+                <button class="navbar-toggler" data-toggle="collapse"
+                    data-target="#collapse-elements" style="border:solid 2px
+                    white">
+                    <span class="navbar-toggler-icon" style="color:white"></span>
+                </button>
 
-    <div class="collapse navbar-collapse" id="collapse-elements">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">Plots</a>
-        <!-- </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Plots</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             -->
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="Resources/assets/images/Fig1.png">Temperature</a>
-            <a class="dropdown-item" href="Resources/assets/images/Fig2.png">Humidity</a>
-            <a class="dropdown-item" href="Resources/assets/images/Fig3.png">Cloudiness</a>
-            <a class="dropdown-item" href="Resources/assets/images/Fig4.png">Wind Speed</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="comparisons.html" >Comparison</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="data.html" >Data</a>
-          </li>
-      </ul>
-    
-    </div>
-    </div>
-  </nav>
+                <div class="collapse navbar-collapse" id="collapse-elements">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                id="navbarDropdown" role="button"
+                                data-toggle="dropdown">Plots</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" href="charts/Fig1.html">Temperature</a>
+                                    <a class="dropdown-item" href="charts/Fig2.html">Humidity</a>
+                                    <a class="dropdown-item" href="charts/Fig3.html">Cloudiness</a>
+                                    <a class="dropdown-item" href="charts/Fig4.html">Wind Speed</a>
+                                </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="comparisons.html">Comparison</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="data.html">Data</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
   
 
   <div class="container">
