--- a/index.html
+++ b/index.html
@@ -53,60 +53,118 @@
 
 
         <div class="container">
-            <div class="row">
-                <div class="col-lg-7 col-sm-6">
-                    <h3 class="description-header">Summary: Latitude vs. X
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <h3 class="card-header">Summary: Latitude vs.
+                                X
+                            </h3>
+                            <img src="Resources/assets/images/Fig1.png"
+                                alt="Latitude vs
+                                Maximum Temperature" class="description-image">
 
-                    </h3>
-                    <hr>
-                    <img src="Resources/assets/images/Fig1.png" alt="Latitude vs
-                        Maximum Temperature" class="description-image">
-                    <p>
-                        The purpose of this project..
-                    </p>
-                </div>
-
-
-                <div class="col-md-4">
-                    <div class="col-md-12">
-                        <h3 class="description-header">Visualizations</h3>
-                        <hr>
-                        <div class="row">
-                            <div class="col-3 col-md-6">
-                                <a href="max-temp.html">
-                                    <img width=200px
-                                        src="Resources/assets/images/Fig1.png"
-                                        alt="Latitude vs. max-temp"
-                                        style="width:100% ;height:100%">
-                                </a>
-                            </div>
-                            <div class="col-3 col-md-6">
-                                <a href="humidity.html">
-                                    <img width=200px
-                                        src="Resources/assets/images/Fig2.png"
-                                        alt="Latitude vs. Humidity"
-                                        style="width:100% ;height:100%">
-                                </a>
-                            </div>
-                            <div class="col-3 col-md-6">
-                                <a href="cloudiness.html">
-                                    <img width=200px
-                                        src="Resources/assets/images/Fig3.png"
-                                        alt="Latitude vs. Cloudiness"
-                                        style="width:100% ;height:100%">
-                                </a>
-                            </div>
-                            <div class="col-3 col-md-6">
-                                <a href="/charts/.html">
-                                    <img width=200px
-                                        src="Resources/assets/images/Fig4.png"
-                                        alt="Latitude vs. Wind Speed"
-                                        style="width:100% ;height:100%">
-                                </a>
-                            </div>
                         </div>
                     </div>
+                    <div class="col-md-6">
+                        <div class="card>
+                            <div class="col-md-12">
+                                <h3 class="description-header">Visualizations</h3>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-3 col-md-6">
+                                        <a href="max-temp.html"
+                                            data-toggle="modal"
+                                            data-target="#myModal1">
+                                            <img width=200px
+                                                src="Resources/assets/images/Fig1.png"
+                                                alt="Latitude vs. max-temp"
+                                                style="width:100% ;height:100%">
+                                        </a>
+                                        <div id="myModal1" class="modal fade"
+                                            tabindex="-1" role="dialog"
+                                            aria-labelledby="myModalLabel"
+                                            aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-body">
+                                                    <img
+                                                        src="Resources/assets/images/Fig1.png"
+                                                        class="img-responsive">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 col-md-6">
+                                        <a href="cloudiness.html"
+                                            data-toggle="modal"
+                                            data-target="#myModal2">
+                                            <img width=200px
+                                                src="Resources/assets/images/Fig2.png"
+                                                alt="Latitude vs. Cloudiness"
+                                                style="width:100% ;height:100%">
+                                        </a>
+                                        <div id="myModal2" class="modal fade"
+                                            tabindex="-1" role="dialog"
+                                            aria-labelledby="myModalLabel"
+                                            aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-body">
+                                                    <img
+                                                        src="Resources/assets/images/Fig2.png"
+                                                        class="img-responsive">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 col-md-6">
+                                        <a href="/charts/Fig3.html"
+                                            data-toggle="modal"
+                                            data-target="#myModal3">
+                                            <img width=200px
+                                                src="Resources/assets/images/Fig3.png"
+                                                alt="Latitude vs. Wind Speed"
+                                                style="width:100% ;height:100%">
+                                        </a>
+                                        <div id="myModal3" class="modal fade"
+                                            tabindex="-1" role="dialog"
+                                            aria-labelledby="myModalLabel"
+                                            aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-body">
+                                                    <img
+                                                        src="Resources/assets/images/Fig3.png"
+                                                        class="img-responsive">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-3 col-md-6">
+                                        <a href="/charts/Fig4.html"
+                                            data-toggle="modal"
+                                            data-target="#myModal4">
+                                            <img width=200px
+                                                src="Resources/assets/images/Fig4.png"
+                                                alt="Latitude vs. Wind Speed"
+                                                style="width:100% ;height:100%">
+                                        </a>
+                                        <div id="myModal4" class="modal fade"
+                                            tabindex="-1" role="dialog"
+                                            aria-labelledby="myModalLabel"
+                                            aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-body">
+                                                    <img
+                                                        src="Resources/assets/images/Fig4.png"
+                                                        class="img-responsive">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
         </div>
