--- a/comparisons.html
+++ b/comparisons.html
@@ -1,53 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title>Landing Page</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!--<link rel="stylesheet" href="style.css">-->
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <head>
+        <meta charset="UTF-8">
+        <title>WeatherPy</title>
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="style.css">-->
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
 
-            <a class="navbar-brand" href="index.html">Latitude</a>
-            <button class="navbar-toggler" data-toggle="collapse"
-                data-target="#collapse-elements" style="border:solid 2px
-                white">
-                <span class="navbar-toggler-icon" style="color:white"></span>
-            </button>
+                <a class="navbar-brand" href="index.html">Latitude</a>
+                <button class="navbar-toggler" data-toggle="collapse"
+                    data-target="#collapse-elements" style="border:solid 2px
+                    white">
+                    <span class="navbar-toggler-icon" style="color:white"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="collapse-elements">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#"
-                            id="navbarDropdown" role="button"
-                            data-toggle="dropdown">Plots</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="charts/Fig1.html">Temperature</a>
-                                <a class="dropdown-item" href="charts/Fig2.html">Humidity</a>
-                                <a class="dropdown-item" href="charts/Fig3.html">Cloudiness</a>
-                                <a class="dropdown-item" href="charts/Fig4.html">Wind Speed</a>
+                <div class="collapse navbar-collapse" id="collapse-elements">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#"
+                                id="navbarDropdown" role="button"
+                                data-toggle="dropdown">Plots</a>
+                            <div class="dropdown-menu"
+                                aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item"
+                                    href="temperature.html">Temperature</a>
+                                <a class="dropdown-item"
+                                    href="humidity.html">Humidity</a>
+                                <a class="dropdown-item"
+                                    href="cloudiness.html">Cloudiness</a>
+                                <a class="dropdown-item"
+                                    href="windspeed.html">Wind
+                                    Speed</a>
                             </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="comparisons.html">Comparison</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="data.html">Data</a>
-                    </li>
-                </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="comparisons.html">Comparison</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="data.html">Data</a>
+                        </li>
+                    </ul>
 
+                </div>
             </div>
+        </nav>
+        <div class="container"> 
+            <article class="row">
+                <div class="col-md-12">
+                    <h1 class="description-header">Comparison: Latitude vs. X</h1>
+                    <hr>
+                    <p class="description-text">Click any plot to get an in-depth description.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="comparison-header">vs. Maximum Temp</h2>
+                    <a href="temperature.html">
+                        <img src="Resources/assets/images/Fig1.png">
+                        <hr>    
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="comparison-header">vs. Humidity</h2>
+                    <a href="humidity.html">
+                        <img src="Resources/assets/images/Fig2.png">
+                        <hr>    
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="comparison-header">vs. Cloudiness</h2>
+                    <a href="cloudiness.html">
+                        <img src="Resources/assets/images/Fig3.png">
+                        <hr>    
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <h2 class="comparison-header">vs. Wind Speed</h2>
+                    <a href="windspeed.html">
+                        <img src="Resources/assets/images/Fig4.png">
+                        <hr>    
+                    </a>
+                </div>
+            </article>
         </div>
-    </nav>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
-</body>
-  
+    </body>
+
 </html>
-  
