--- a/windspeed.html
+++ b/windspeed.html
@@ -54,9 +54,9 @@
       <section class="row">
           <div class="col-md-8">
               <article class="description-content">
-                  <h1 class="description-header">Max Temperature</h1>
+                  <h1 class="description-header">Wind Speed</h1>
                   <hr>
-                  <img src="Resources/assets/images/Fig1.png">
+                  <img src="Resources/assets/images/Fig4.png">
                   <p>Type here..</p>
               </article>
           </div>
