--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Landing Page</title>
+        <title>WeatherPy</title>
         <link rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
 
-                <a class="navbar-brand" href="index.html">Web Design Challenge</a>
+                <a class="navbar-brand" href="index.html">Latitude</a>
                 <button class="navbar-toggler" data-toggle="collapse"
                     data-target="#collapse-elements" style="border:solid 2px
                     white">
@@ -30,13 +30,13 @@
                             <div class="dropdown-menu"
                                 aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item"
-                                    href="charts/Fig1.html">Temperature</a>
+                                    href="temperature.html">Temperature</a>
                                 <a class="dropdown-item"
-                                    href="charts/Fig2.html">Humidity</a>
+                                    href="humidity.html">Humidity</a>
                                 <a class="dropdown-item"
-                                    href="charts/Fig3.html">Cloudiness</a>
+                                    href="cloudiness.html">Cloudiness</a>
                                 <a class="dropdown-item"
-                                    href="charts/Fig4.html">Wind Speed</a>
+                                    href="windspeed.html">Wind Speed</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="card">
                             <h3 class="card-header">Summary: Latitude vs.
                                 X
@@ -63,10 +63,14 @@
                             <img src="Resources/assets/images/Fig1.png"
                                 alt="Latitude vs
                                 Maximum Temperature" class="description-image">
-
+                            <p>
+                                The Purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+                                After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
+                                    
+                            </p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="card>
                             <div class="col-md-12">
                                 <h3 class="description-header">Visualizations</h3>
