--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-
+                <div class="pad-latitude">
                 <a class="navbar-brand" href="index.html">Latitude</a>
+                </div>
                 <button class="navbar-toggler" data-toggle="collapse"
                     data-target="#collapse-elements" style="border:solid 2px
                     white">
@@ -24,7 +25,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="collapse-elements">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav align-content-md-end">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#"
                                 id="navbarDropdown" role="button"
@@ -66,9 +67,20 @@
                                 alt="Latitude vs
                                 Maximum Temperature" class="description-image">
                             <p>
-                                The Purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-                                After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
-                                    
+                                The Purpose of this project was to analyze how
+                                weather changes as you get closer to the
+                                equator. To accomplish this analysis, we first
+                                pulled data from the OpenWeatherMap API to
+                                assemble a dataset on over 500 cities.
+                                After assembling the dataset, we used Matplotlib
+                                to plot various aspects of the weather vs.
+                                latitude. Factors we looked at included:
+                                temperature, cloudiness, wind speed, and
+                                humidity. This site provides the source data and
+                                visualizations created as part of the analysis,
+                                as well as explanations and descriptions of any
+                                trends and correlations witnessed.
+
                             </p>
                         </div>
                     </div>
